enabled the dragging of array nodes over the root node textarea object